--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "framer-motion": "^9.0.1",
